WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
316266
[curl] REGRESSION(
276696@main
): Web Inspector: WebSocket response status text is one character short
https://bugs.webkit.org/show_bug.cgi?id=316266
Summary
[curl] REGRESSION(276696@main): Web Inspector: WebSocket response status text...
Devin Rousso
Reported
2026-06-03 18:11:57 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Devin Rousso
Comment 1
2026-06-03 18:20:26 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/66414
Devin Rousso
Comment 2
2026-06-04 12:20:04 PDT
# STEPS TO REPRODUCE 1. install `node` and `npm` 2. run `npx playwright wk
https://cdpn.io/matt-west/fullpage/nYvVBV
` 3. open Web Inspector 4. look at `echo.websocket.org` in the Network Tab ## EXPECTED the status should say "101 Switching Protocols" ## ACTUAL the status actually says "101 Switching Protocol" without the "s" at the end
EWS
Comment 3
2026-06-05 08:58:58 PDT
Committed
314637@main
(64ba9cf9f889): <
https://commits.webkit.org/314637@main
> Reviewed commits have been landed. Closing PR #66414 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2026-06-05 08:59:13 PDT
<
rdar://problem/178826478
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug