Cherry-pick 314637@main (64ba9cf9f889). https://bugs.webkit.org/show_bug.cgi?id=316266

[curl] REGRESSION(276696@main): Web Inspector: WebSocket response status text is one character short
    https://bugs.webkit.org/show_bug.cgi?id=316266

    Reviewed by Don Olmstead.

    276696@main should've used `lineLength` instead of `index` to match the same logic as before

    `index` points to the `\n` so subtracting one from that will miss a character since `std::span::subspan` will not include the item at `offset + count`

    * Source/WebCore/Modules/websockets/WebSocketHandshake.cpp:
    (WebCore::WebSocketHandshake::readStatusLine):

    * LayoutTests/http/tests/websocket/tests/hybi/inspector/before-load.html:
    * LayoutTests/http/tests/websocket/tests/hybi/inspector/before-load-expected.txt:

    Canonical link: https://commits.webkit.org/314637@main

Canonical link: https://commits.webkit.org/305877.734@webkitglib/2.52